--- a/_pdfs/index.html
+++ b/_pdfs/index.html
@@ -1,1 +1,1 @@
-<embed src="https://dingyi-lai.github.io/[DR]term_paper.pdf" width="100%" height="850px"/>
+<embed src="https://dingyi-lai.github.io/_pdfs/[DR]term_paper.pdf" width="100%" height="850px"/>
