--- a/_pdfs/index.html
+++ b/_pdfs/index.html
@@ -1,1 +1,1 @@
-<embed src="https://dingyi-lai.github.io/_pdfs/[DR]term_paper.pdf" width="100%" height="850px"/>
+<embed src="https://github.com/Dingyi-Lai/Dingyi-Lai.github.io/blob/main/_pdfs/%5BDR%5Dterm_paper.pdf" width="100%" height="850px"/>
