--- a/_pdfs/index.html
+++ b/_pdfs/index.html
@@ -1,1 +1,2 @@
-<embed src="https://github.com/Dingyi-Lai/Dingyi-Lai.github.io/blob/main/_pdfs/%5BDR%5Dterm_paper.pdf" width="100%" height="850px"/>
+<iframe src="./[DR]term_paper.pdf" width="100% height=100%">
+</iframe>
